objects/Challenge_Submission__c.object
<CustomObject>
    <fields>
        <fullName>Challenge_Participant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The participant who upload the submission.</description>
        <label>Challenge Participant</label>
        <referenceTo>Challenge_Participant__c</referenceTo>
        <relationshipLabel>Submissions</relationshipLabel>
        <relationshipName>Challenge_Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Challenge__c</fullName>
        <description>The challenge the submission is associated to.</description>
        <label>Challenge</label>
        <referenceTo>Challenge__c</referenceTo>
        <relationshipLabel>Challenge Submissions</relationshipLabel>
        <relationshipName>Challenge_Submissions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Any comments regarding the submission.</description>
        <inlineHelpText>Any comments regarding the submission.</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the member marked this file as deleted?</description>
        <inlineHelpText>Has the member marked this file as deleted?</inlineHelpText>
        <label>Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>File</fullName>
                    <default>true</default>
                    <label>File</label>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>URL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>The URL on EC2 where the file resides or a link to Youtube or some other site.</description>
        <inlineHelpText>The URL on EC2 where the file resides or a link to Youtube or some other site.</inlineHelpText>
        <label>URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <formula>Challenge_Participant__r.Member__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Username</label>
        <type>Text</type>
    </fields>
    <label>Challenge Submission</label>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Challenge Submissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>